--- a/Taskit/Base.lproj/Main.storyboard
+++ b/Taskit/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="x60-LU-L6O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="x60-LU-L6O">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
     </dependencies>
     <scenes>
@@ -18,15 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fDC-AC-gky">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fDC-AC-gky">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" id="h8N-7p-sEY" customClass="TaskCell" customModule="Taskit" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="320" height="75"/>
+                                        <rect key="frame" x="0.0" y="92" width="600" height="75"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="h8N-7p-sEY" id="2lP-aO-mpw">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="74.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="75"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Task" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pdV-Dq-t9g">
@@ -54,6 +54,7 @@
                                             <outlet property="dateLabel" destination="O4m-1g-S39" id="f3l-nl-VJv"/>
                                             <outlet property="descriptionLabel" destination="Pex-Xw-JTD" id="Fta-uq-r7y"/>
                                             <outlet property="taskLabel" destination="pdV-Dq-t9g" id="0Zt-IW-6xc"/>
+                                            <segue destination="JuJ-Iw-qM8" kind="show" identifier="showTaskDetail" id="Rdw-iY-BXY"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -64,24 +65,33 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="fDC-AC-gky" secondAttribute="trailing" id="LJW-cb-lxi"/>
+                            <constraint firstItem="fDC-AC-gky" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="tle-QH-ysi"/>
+                            <constraint firstItem="fDC-AC-gky" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wJe-X8-6Ui"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fDC-AC-gky" secondAttribute="bottom" id="yDj-2E-wuT"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Tasks" id="qco-bP-ro0">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="27m-dw-qsZ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="27m-dw-qsZ">
+                            <connections>
+                                <action selector="addButtonTapped:" destination="BYZ-38-t0r" id="2xn-QH-TWp"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="fDC-AC-gky" id="TNQ-xE-zXU"/>
-                        <segue destination="JuJ-Iw-qM8" kind="show" identifier="showTaskDetail" id="aVY-ko-66C"/>
-                        <segue destination="Xue-z9-lep" kind="presentation" id="9nf-mn-Uk8"/>
+                        <segue destination="Xue-z9-lep" kind="presentation" identifier="showTaskAdd" id="9nf-mn-Uk8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1137" y="387"/>
         </scene>
-        <!--Add Task View Controller-->
+        <!--AddTaskViewController-->
         <scene sceneID="flN-D2-9Gn">
             <objects>
-                <viewController id="Xue-z9-lep" customClass="addTaskViewController" customModule="Taskit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="AddTaskViewController" id="Xue-z9-lep" customClass="AddTaskViewController" customModule="Taskit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2BA-I1-88b"/>
                         <viewControllerLayoutGuide type="bottom" id="eZH-3q-E6c"/>
@@ -90,10 +100,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iTL-xf-9bW">
-                                <rect key="frame" x="20" y="20" width="61" height="30"/>
-                                <state key="normal" title="Cancel"/>
-                            </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f18-tj-1tX">
                                 <rect key="frame" x="20" y="74" width="280" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -113,24 +119,31 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Task" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCE-Re-p2k">
                                 <rect key="frame" x="26" y="45" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SubTask" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K78-2m-mhH">
                                 <rect key="frame" x="26" y="119" width="65" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SCE-DU-rRg">
                                 <rect key="frame" x="26" y="209" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m4I-E6-KRC">
                                 <rect key="frame" x="242" y="20" width="78" height="30"/>
                                 <state key="normal" title="AddTask"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iTL-xf-9bW">
+                                <rect key="frame" x="20" y="20" width="61" height="30"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelButtonTapped:" destination="Xue-z9-lep" eventType="touchUpInside" id="kt9-eJ-PFL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -175,7 +188,11 @@
                         <barButtonItem title="Item" id="yN6-Mq-Q6s"/>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Detail" id="qW2-qe-8Ag">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="UjK-fd-iW6"/>
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="UjK-fd-iW6">
+                            <connections>
+                                <action selector="cancelButtonTapped:" destination="JuJ-Iw-qM8" id="w0h-dd-qFm"/>
+                            </connections>
+                        </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem title="Done" id="HEe-Nv-cmf"/>
                             <barButtonItem title="Item" id="5sQ-9Y-rcq"/>
